--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
     width: 100%;
     padding: 10px;
     background-color: #0056b3;
-    color: white;
+    color: #ffffff;
     border: none;
     cursor: pointer;
   }
@@ -20,9 +20,17 @@ body {
   button:hover {
     background-color: #e80ce0;
   }
-  
-  p {
+ 
+  #additional-text {
+    color: #000000;
+  }
+
+  #leaving-hours {
+    color:#0000ff;
+  }
+
+  #result,#leaving-hours, #additional-text {
+    font-weight: bold;
     margin-top: 10px;
     font-size: 14px;
   }
- 
